--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -161,6 +161,7 @@ article.page {
         display: flex;
         color: $text-color;
         flex-direction: row;
+        align-items: center;
         text-align: left;
         padding: 0em;
         border: 0px;
