--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -10,6 +10,10 @@
     color: $color-gray;  
 }
 
+.highlight {
+    color: $color-secondary;
+}
+
 h1, h2 {
     text-align: center;
     font-size: 1.5em;
