--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -90,19 +90,19 @@ footer,
     .back,
     [app-page-control] {
         position: absolute;
-        top: 0%;
+        bottom: 0%;
         width: auto;
         margin: 0px;
-        padding: 1em $space-size;
-        padding-top: 2em;
+        padding: 0.5em $space-size;
+        line-height: 1.25em;
     }
     
     .back {
-        left: $space-size;
+        left: 0px;
     }
 
     [app-page-control] {
-        right: $space-size;
+        right: 0px;
     }
 
 }
