Make weekly survey dynamic and values save-able

--- a/client/src/pages/weekly-survey/survey.component.html
+++ b/client/src/pages/weekly-survey/survey.component.html
@@ -3,40 +3,10 @@
     submitLabel="Next page"
     (onSubmit)="nextPage()"
     >
-    <app-range-field
-        formControlName="enjoy"
-        label="How much are you enjoying the physical activities you did this week?"
-        [options]="muchOptions"
-        >
-    </app-range-field>
-    <app-range-field
-        formControlName="fit"
-        label="How well is physical activity currently fitting into your daily routine?"
-        [options]="muchOptions"
-        >
-    </app-range-field>
-    <app-range-field
-        formControlName="supported"
-        label="People in my life supported me in my efforts to be more active this past week."
-        [options]="trueOptions"
-        >
-    </app-range-field>
-    <app-range-field
-        formControlName="important"
-        label="This past week, I walked or exercised because it's important to my life."
-        [options]="muchOptions"
-        >
-    </app-range-field>
-    <app-range-field
-        formControlName="other"
-        label="This past week, I walked or exercised because other people think I should."
-        [options]="trueOptions"
-        >
-    </app-range-field>
-    <app-range-field
-        formControlName="stressed"
-        label="This week, I walked or exercised because I felt restless, stressed, or in a bad mood."
-        [options]="trueOptions"
+    <app-range-field *ngFor="let question of questions"
+        [formControlName]="question.name"
+        [label]="question.label"
+        [options]="question.options"
         >
     </app-range-field>
 </app-form>
