Add confidence values because default removed from range component

--- a/client/src/heartsteps/weekly-survey/weekly-goal.component.html
+++ b/client/src/heartsteps/weekly-survey/weekly-goal.component.html
@@ -15,6 +15,7 @@
     <app-range-field
         formControlName="confidence"
         label="How confident are you that you'll reach your goal"
+        [options]="confidenceOptions"
         >
     </app-range-field>
 </app-form>
