--- a/client/src/heartsteps/fitbit-watch/watch-setup.component.html
+++ b/client/src/heartsteps/fitbit-watch/watch-setup.component.html
@@ -1,4 +1,4 @@
-<p>Let's set up your fitbit watch with the Heartsteps clockface!</p>
+<p>Let's set up your Fitbit watch with the Heartsteps clockface!</p>
 <button (click)="openFitbitPage()">Install clockface</button>
-<p>Once the clock face is installed, follow the steps on the clock face to authenticate your watch with heartsteps. When you have setup your watch, click done below.</p>
+<p>Once the clock face is installed, follow the steps on the clockface to authenticate your watch with heartsteps. When you have setup your watch, click done below.</p>
 <button (click)="markDone()">Done</button>
