Add enrollment page to website

--- a/client/src/infrastructure/components/page.component.html
+++ b/client/src/infrastructure/components/page.component.html
@@ -9,7 +9,7 @@
         </a>
         <ng-content select="[app-page-control]"></ng-content>
     </header>
-    <ion-content>
+    <div class="content">
         <ng-content></ng-content>
-    </ion-content>
+    </div>
 </article>
