--- a/client/src/infrastructure/components/page.component.scss
+++ b/client/src/infrastructure/components/page.component.scss
@@ -1,6 +1,8 @@
 app-page {
     @extend .heartsteps-container;
     @extend .heartsteps-page;
+
+    color: $text-color;
 }
 
 ion-content .scroll-content {
