--- a/client/src/website/website.scss
+++ b/client/src/website/website.scss
@@ -5,7 +5,28 @@
 @import 'theme/start-screen.scss';
 @import 'theme/ionic.scss';
 
-.app-root > .pages > *,
+ion-app {
+    @extend .start-screen;
+    margin: 0px;
+
+    > .app-root {
+        margin: 0px;
+    }
+}
+
+.app-root > .pages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: auto;
+    height: 100%;
+}
+
+.app-root > .pages > * {
+    width: 660px;
+    margin: 2em auto;
+}
+
 .app-root > .modals > * {
     display: flex;
     position: absolute;
@@ -14,22 +35,6 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-}
-
-.app-root > .modals > * {
-    z-index: 15;
-    padding: 2em;
-    &:before {
-        content:'';
-        background-color: #000;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        opacity: 0.6;
-        z-index: 10;
-    }
 
     > * {
         position: absolute;
@@ -41,6 +46,24 @@
         width: 550px;
     }
 }
+
+.app-root > .modals > * {
+    z-index: 15;
+    padding: 2em;
+
+    &:before {
+        content:'';
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        opacity: 0.6;
+        z-index: 10;
+    }
+}
+
 
 .app-root > .pages > router-outlet,
 .app-root > .modals > router-outlet {
