--- a/client/src/infrastructure/components/page.component.scss
+++ b/client/src/infrastructure/components/page.component.scss
@@ -1,9 +1,6 @@
 app-page {
     @extend .heartsteps-container;
-    @extend .heartsteps-page;
+    > article {
+        @extend .heartsteps-page;
+    }
 }
-
-ion-content .scroll-content {
-    @extend .heartsteps-container;
-}
-
