Change stats page to activities page

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -45,7 +45,7 @@ page-home {
         .planning:before {
             mask-image: url('../assets/planning.svg');
         }
-        .stats:before {
+        .activities:before {
             mask-image: url('../assets/stats.svg');
         }
         .library:before {
