Don't display moderate or vigorous minutes, just 'earned' minutes

--- a/client/src/heartsteps/activity-logs/activity-log.component.html
+++ b/client/src/heartsteps/activity-logs/activity-log.component.html
@@ -1,5 +1,10 @@
 <dl>
-    <dd>{{type}}, {{activityLevel}}</dd>
+    <dd>{{type}}</dd>
     <dd>{{start}} - {{end}}</dd>
+    <dd *ngIf="vigorous"
+        class="highlight"
+        >
+        2x minutes earned
+    </dd>
 </dl>
 <p class="earned">{{earnedMinutes}}<span>min</span></p>
