--- a/client/src/heartsteps/daily-summaries/daily-summary.component.scss
+++ b/client/src/heartsteps/daily-summaries/daily-summary.component.scss
@@ -1,14 +1,7 @@
 heartsteps-daily-summary {
 
-    > * {
-        margin: 0.5em 0em;
-        padding: 0em;
+    ul {
+        @extend ul.horizontal;
     }
 
-    > p {
-        color: $color-secondary;
-        font-size: 1.25em;
-        font-weight: bold;
-        text-align: center;
-    }
 }
