--- a/client/src/theme/buttons.scss
+++ b/client/src/theme/buttons.scss
@@ -1,33 +1,28 @@
 .heartsteps-button {
     display: block;
     position: relative;
-    color: $color-primary;
-    border: 1px $color-primary solid;
-    background: transparent;
+    width: 100%;
     padding: 1em;
-    text-align: center;
-    display: block;
     font-size: 1em;
+    text-align: center;
+    border: 1px $color-primary solid;
+    background: $color-white;
+    color: $color-primary;
 
     > span {
         color: $text-color;
     }
 
     &:focus, &:hover {
-        box-shadow: inset 0 0 0.1em 0px $color-primary;
+        box-shadow: inset 0 0 0.5em 0px $color-primary;
         outline: none;
     }
 
+    &.is-loading,
     &:active {
-        box-shadow: inset 0 0 1em 0px $color-primary;
+        background-color: $color-primary;
+        color: $color-white;
     }
-}
-
-.heartsteps-primary-button {
-    @extend .heartsteps-button;
-    color: $color-white;
-    background-color: $color-primary;
-    border: 0px;
 }
 
 .heartsteps-danger-button {
@@ -36,38 +31,34 @@
     border-color: $color-danger;
 
     &:focus, &:hover {
-        box-shadow: inset 0 0 0.1em 0px $color-danger;
+        box-shadow: inset 0 0 0.5em 0px $color-danger;
     }
 
     &:active {
-        box-shadow: inset 0 0 1em 0px $color-danger;
+        background-color: $color-danger;
+        color: $color-white;
     }
 }
 
 .heartsteps-minor-button {
     @extend .heartsteps-button;
-    width: 100%;
     border: 0px;
 
     &:focus, &:hover {
         box-shadow: none;
         box-shadow: inset 0 0 0px 0px $color-primary;
+        text-decoration: underline;
     }
 
+    .is-loading,
     &:active {
-        box-shadow: none;
-        opacity: 0.5;
+        background-color: $color-white;
+        color: $color-primary;
     }
+
 }
 
-button.item-cover {
-    border: 0px;
-    position: absolute;
-    padding: 0px;
-    margin: 0px;
-}
-
-button.remove {
+.heartsteps-remove-button {
     color: $text-color;
     padding-right: 40px;
 
