--- a/client/src/theme/logo.scss
+++ b/client/src/theme/logo.scss
@@ -10,7 +10,7 @@
     margin: 2em auto;
     &:after {
         content: ' ';
-        mask: url('../assets/heartsteps-logo.svg') no-repeat 0px 0px;
+        mask: url('../assets/heartsteps-logo.svg') no-repeat 50% 50%;
         mask-size: contain;
         width: 100%;
         height: 100%;
