--- a/client/src/theme/pages.scss
+++ b/client/src/theme/pages.scss
@@ -24,6 +24,13 @@
     }
 }
 
+@media(min-width: 650px) {
+    .heartsteps-page {
+        width: 635px;
+        margin: 1em auto;
+    }
+}
+
 .heartsteps-page {
     .title,
     h2, h3, h4, h5, h6 {
