Form styles clean up

--- a/client/src/heartsteps/activity-logs/activity-enjoyed-field.component.html
+++ b/client/src/heartsteps/activity-logs/activity-enjoyed-field.component.html
@@ -1,5 +1,5 @@
 <fieldset class="input-group">
-    <legend>How much did you enjoy this activity?</legend>
+    <legend class="description">How much did you enjoy this activity?</legend>
     <ul>
         <li *ngFor="let option of options; let index = index">
             <input id="activity-enjoyed-{{index}}"
