--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 page-home {
     @extend .heartsteps-page;
     background-color: $background-alternate;
+    margin: 0px;
 
     > .content {
         padding: 0em;
