--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -53,8 +53,10 @@ $colors: (
 
 $background-primary: $color-white;
 $background-alternate: $color-gray-light;
+
 $text-color: $color-gray-dark;
 $link-color: $color-primary;
+$selected-color: $color-primary;
 
 $border-color: $color-gray-dark;
 $border-width: 1px;
