--- a/client/src/infrastructure/form/forms.scss
+++ b/client/src/infrastructure/form/forms.scss
@@ -1,143 +1,10 @@
 
 app-form {
-    @extend form;
+    @extend .heartsteps-form;
     flex-grow: 1;
 
     > form {
         @extend .heartsteps-container;
         flex-grow: 1;
-    }
-}
-
-.heartsteps-form {
-
-    > .controls {
-        margin: 0em 0em;
-        > * {
-            margin: 0.5em 0em;
-        }
-        [app-form-controls] {
-            margin: 0px;
-            > * {
-                margin:0.5em 0em;
-            }
-        }
-    }
-}
-
-.heartsteps-form-input {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-
-    width: 100%;
-    padding: 0.5em 0em;
-    border: 0px;
-
-    > * {
-        flex: 0 1 auto;
-        margin: 0em 0.25em;
-        
-        &:first-child,
-        &:last-child {
-            margin: 0px;
-        }
-    }
-
-    > button,
-    > input {
-        border: 0px;
-    }
-
-    > button {
-        @extend .heartsteps-minor-button;
-        text-align: left;
-    }
-}
-
-.heartsteps-form-field {
-    border-bottom: $color-gray-light 1px solid;
-
-    > * {
-        flex: 0 0 auto;
-    }
-
-    > .input,
-    > input,
-    > button {
-        @extend .heartsteps-form-input;
-    }
-
-    input {
-        &:disabled {
-            background-color: transparent;
-        }
-
-        &[type=number] {
-            text-align: right;
-        }
-    }
-
-    > .errors {
-        display: none;
-        color: $color-danger;
-
-        > * {
-            margin: 0.5em 0em 0em;
-        }
-    }
-
-    > ul {
-        margin: 0em;
-        padding: 0em;
-    }
-}
-
-.heartsteps-form-field.is-invalid {
-
-    border-bottom-color: $color-danger;
-
-    > .errors {
-        display: block;
-    }
-
-    > .heartsteps-form-input:after {
-        content: '';
-        display: block;
-        width: 1em;
-        height: 1em;
-        margin: 0px 0.5em;
-        background-color: $color-danger;
-        mask-image: url('../assets/error-icon.svg');
-        mask-repeat: no-repeat;
-        mask-position: 50% 50%;
-        mask-size: 100% 100%;
-    }
-
-    label, legend {
-        color: $color-danger;
-    }
-}
-
-.heartsteps-form-field.is-focused,
-.heartsteps-form-field.is-focused.is-invalid {
-    border-bottom-color: $color-primary;
-
-    label, legend {
-        color: $color-primary;
-    }
-}
-
-.heartsteps-form-field.is-disabled,
-.heartsteps-form-field.is-focused.is-invalid.is-disabled,
-.heartsteps-form-field.is-focused.is-disabled {
-    border-bottom-width: 0px;
-}
-
-fieldset.heartsteps-form-field {
-    legend {
-        @extend label;
-        font-weight: normal;
-        padding: 0em;
     }
 }
