--- a/client/src/infrastructure/form/choice-field.component.html
+++ b/client/src/infrastructure/form/choice-field.component.html
@@ -6,16 +6,36 @@
         {{error}}
     </p>
     <p *ngIf="!options">No options available</p>
-    <ul>
+    <ul *ngIf="!selectedOption">
         <li *ngFor="let option of options; let index = index">
-            <button 
-                (click)="updateValue(option.value)"
+            <input id="{{name}}-{{index}}"
+                type="radio"
+                [value]="option"
+                [ngModel]="selectedOption"
+                (ngModelChange)="updateValue(option.value)"
                 [disabled]="isDisabled"
-                [ngClass]="{selected: selectedOption && option.name === selectedOption.name}"
-                type="button"
-                >
+                />
+            <label for="{{name}}-{{index}}">
                 {{option.name}}
-            </button>
+            </label>
         </li>
     </ul>
+    <div *ngIf="selectedOption"
+        class="selected-option"
+        >
+        <ul>
+            <li>
+                <input id="{{name}}-selected"
+                    type="radio"
+                    [value]="selectedOption"
+                    [ngModel]="selectedOption"
+                    [disabled]="isDisabled"
+                    />
+                <label for="{{name}}-selected">
+                    {{selectedOption.name}}
+                </label>
+            </li>
+        </ul>
+        <button (click)="reset()">Remove</button>
+    </div>
 </fieldset>
