--- a/client/src/infrastructure/form/time-field.component.html
+++ b/client/src/infrastructure/form/time-field.component.html
@@ -1,6 +1,7 @@
 <label for="{{name}}">{{label}}</label>
 <button id="{{name}}"
     type="button"
+    class="select-button"
     (click)="select()"
     (focus)="isFocused()"
     (blur)="isBlurred()"
